Dev: fix for hero banner height on mobile

--- a/styles.css
+++ b/styles.css
@@ -463,7 +463,7 @@ a#contact-nav-btn {
     max-width: 300px;
   }
 }
-@media (max-height: 800px) {
+@media (max-height: 900px) {
   .hero-section__image img {
     display: none;
   }
@@ -473,7 +473,7 @@ a#contact-nav-btn {
     bottom: 20px;
   }
 }
-@media (max-height: 500px) {
+@media (max-height: 660px) {
   #hero-down-arrow {
     display: none;
   }
